# python-lumix-control

./: pyproject.toml
example/: live_view.py
example/auto_discovery/: auto_discovery.py  ssdp.py
lumix_control/: camera.py
