[tool.poetry]
name = "lumix-control"
version = "0.1.0"
description = "Control Panasonic Lumix cameras over WiFi."
authors = [
    "Michael Hand aka. palmdalian",
    "Toby McLaughlin <toby@jarpy.net>",
]
readme = "README.md"
packages = [{include = "lumix_control"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.2"
opencv-python = "^4.7.0.72"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
mypy = "^1.0.1"
ipython = "^8.11.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
